--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="/apple-touch-icon.png" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portafolio Profesional de Desarrollador Web</title>
+    <title>Gabriel Vejar - Portafolio Profesional de Desarrollador de Software</title>
   </head>
   <body>
     <div id="root"></div>
